working on user model with routing and setting up controller, need to figure out how it's pathing

--- a/views/user/signupform.ejs
+++ b/views/user/signupform.ejs
@@ -1,7 +1,8 @@
 <form method="post" action="/signup" >
   <!-- <fieldset> -->
-  <input type="text" name="target" placeholder="enter num"><br>
-  <input type="text" name="content" placeholder="message contents"><br>
+  <input type="text" name="name" placeholder="username"><br>
+  <input type="text" name="password" placeholder="password"><br>
+  <input type="text" name="email" placeholder="email"><br>
   <input type="submit" value="Submit" />
   <!-- </fieldset> -->
 </form>
