added user creation and password validation

--- a/views/user/signin.ejs
+++ b/views/user/signin.ejs
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= title %></title>
+    <title>Sign In</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
 
   </head>
   <body>
-    <h1><%= title %></h1>
-    <p></p>
+    <h1>Sign in</h1>
 
+    <p></p>
+<div><%= message %></div>
+<%- include('signinform') %>
 <%- include('../footer') %>
