--- a/views/user/signinform.ejs
+++ b/views/user/signinform.ejs
@@ -1,7 +1,7 @@
-<form method="post" action="/signin" >
+<form method="post" action="/user/signin" >
   <!-- <fieldset> -->
-  <input type="text" name="target" placeholder="enter num"><br>
-  <input type="text" name="content" placeholder="message contents"><br>
+  <input type="text" name="name" placeholder="username"><br>
+  <input type="password" name="password" placeholder="password"><br>
   <input type="submit" value="Submit" />
   <!-- </fieldset> -->
 </form>
