--- a/views/user/signupform.ejs
+++ b/views/user/signupform.ejs
@@ -1,7 +1,7 @@
-<form method="post" action="/signup" >
+<form method="post" action="/user/signup" >
   <!-- <fieldset> -->
   <input type="text" name="name" placeholder="username"><br>
-  <input type="text" name="password" placeholder="password"><br>
+  <input type="password" name="password" placeholder="password"><br>
   <input type="text" name="email" placeholder="email"><br>
   <input type="submit" value="Submit" />
   <!-- </fieldset> -->
