--- a/views/user/signup.ejs
+++ b/views/user/signup.ejs
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= title %></title>
+    <title>Sign Up Form</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
 
   </head>
   <body>
-    <h1><%= title %></h1>
+    <h1>Sign up form</h1>
+
     <p></p>
+    <div><%= message %></div>
+
 <%- include('signupform') %>
 <%- include('../footer') %>
