--- a/views/user/signupform.ejs
+++ b/views/user/signupform.ejs
@@ -2,6 +2,7 @@
   <!-- <fieldset> -->
   <input type="text" name="name" placeholder="username"><br>
   <input type="password" name="password" placeholder="password"><br>
+  <input type="text" name="phone" value="Enter phone number here"><br>
   <input type="text" name="email" placeholder="email"><br>
   <input type="submit" value="Submit" />
   <!-- </fieldset> -->
